syntax = "proto3";

package protodb.server;

import "google/protobuf/descriptor.proto";

message DefineCollection {
  string database = 1;
  string collection = 2;
}

message DefineCollectionResponse {
  bool success = 1;
  enum FailureCode {
    INVALID_DATABASE_NAME = 0;
    INVALID_COLLECTION_NAME = 1;
  }
  FailureCode failure_code = 2;

  google.protobuf.DescriptorProto schema = 3;
}
