syntax = "proto3";

package protodb.server;

message DeleteCollection {
  string database = 1;
  string collection = 2;
}

message DeleteCollectionResponse {
  bool success = 1;
  enum FailureCode {
    INVALID_DATABASE_NAME = 0;
  }
  FailureCode failure_code = 2;
}
