syntax = "proto3";

package protodb.server;

message ListCollections {
  string database = 1;
}

message ListCollectionsResponse {
  bool success = 1;
  enum FailureCode {
    INVALID_DB = 0;
  }
  FailureCode failure_code = 2;

  repeated string collection = 3;
}
