syntax = "proto3";

package protodb.server;

message DefineDatabase {
  string name = 1;
}

message DefineDatabaseResponse {
  bool success = 1;
  enum FailureCode {
    INVALID_DB = 0;
  }
  FailureCode failure_code = 2;

  repeated string collection = 3;
}
