syntax = "proto3";

package protodb.server;

message DeleteDatabase {
  string name = 1;
}

message DeleteDatabaseResponse {
}
